--- a/testqjs.html
+++ b/testqjs.html
@@ -53,7 +53,7 @@
                 for (var i=0, l=pages.length; i<l; i++) {
                     getSizeSettingsFromPage(pages[i], calculateRatio);   
                 }
-                checkWhenReady();
+                checkWhenReady(); // this does NOT work.
             }
 
             function getSizeSettingsFromPage(file, whenReady) {
