--- a/testqjs.html
+++ b/testqjs.html
@@ -53,16 +53,12 @@
                 // collect all the promises 
                 // of the traversed files undergoing calculateRatio
                 var promises = []; 
-                var to_go = pages.length;
+                
                 for (var i=0, l=pages.length; i<l; i++) {
-                    getSizeSettingsFromPage(pages[i], calculateRatio).then(function(value){
-                           to_go--;
-                           if(to_go == 0){
-                               checkWhenReady();
-                           }
-                    });   
+                    promises[i] = getSizeSettingsFromPage(pages[i], calculateRatio);
                 }
-                //Q.all(promises).then(function(value){ checkWhenReady() });
+                // this returns 0 
+                Q.all(promises).then(function(value){ checkWhenReady(); });
             }
 
             function getSizeSettingsFromPage(file, whenReady) {
